--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: ci
 on:
   push:
     branches:
-      - main
+      - master
   schedule:
-    - cron: "5 9 * * *"
+    - cron: "12 9 * * *"
 
 jobs:
   autogreen:
